# MCP

./: main.py  pyproject.toml
core/: __init__.py  agent.py  chat.py  client.py  llm.py
core/utils/: __init___.py  embedding_retriever.py  util.py  vector_store.py
tests/: test_connect_ollama.py  test_npx.py
